--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
   text-align: center;
   font-family: "Merriweather", serif;
   color: #ffffff;
-  background-color: #f876de;
-  background-image: linear-gradient(315deg, #f876de 0%, #b9d1eb 74%);
+  background: #4CA1AF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 /* headings and paragraphs */
